# htmx-attempt

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.cjs
src/: main.rs
templates/: hello.html
